Corrected Home items' alignment based on screen width

--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 1200px;
-  min-width: 570px;
+  min-width: 580px;
   margin: auto;
   margin-top: 20px;
 }
@@ -69,7 +69,7 @@
     object-fit: contain;
 }
 
-@media screen and (max-width: 1510px) {
+@media screen and (max-width: 1200px) {
   .home {
     flex-direction: column;
   }
